modificando package.lock.json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "amerike-template-11ty-1ciber",
+  "name": "practica-12-1.0",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
